# appscanstock

./: .gitignore  GETTING_STARTED.md  GUIDE-DEMARRAGE.md  README.md  etape de generation desktop.docx  package-lock.json  test-api.ps1
.github/: copilot-instructions.md
backend/: .env.example  dp.py  init_db.py  pyproject.toml  requirements.txt  start_server.ps1  start_server.sh
backend/app/: database.py  init.py  main.py
backend/app/routers/: adjustments.py  auth.py  maintenance.py  mobile.py  products.py  reports.py  stock_entries.py  stock_exits.py
backend/app/schemas/: __init__.py
desktop/: STRUCTURE.md  TRANSFORMATION-SUMMARY.md  index.html  package-lock.json  package.json  vite.config.js
desktop/electron/: main.js  preload.js
desktop/src/: App.jsx  index.css
desktop/src/components/: index.js
desktop/src/components/adjustments/: AdjustmentDialog.jsx  Adjustments.jsx
desktop/src/components/auth/: LoginForm.jsx
desktop/src/components/common/: CameraScannerDialog.jsx  StockCard.jsx
desktop/src/components/dashboard/: Dashboard.jsx
desktop/src/components/layout/: Header.jsx  Sidebar.jsx
desktop/src/components/movements/: MovementsTable.jsx
desktop/src/components/products/: EntryDialog.jsx  ExitDialog.jsx  ProductDetailsDialog.jsx  (+2 more)
desktop/src/config/: index.js
desktop/src/constants/: index.js  ui.js
desktop/src/hooks/: index.js  useApi.js
desktop/src/services/: api.js  index.js
desktop/src/theme/: index.js
desktop/src/utils/: helpers.js  index.js
frontend/: App.js  package-lock.json  package.json
frontend/services/: api.js
(+4 files in other folders)
